[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ASDParser"
version = "0.0.1"
authors = [
  { name="Pegerto Fernandez", email="pegerto@gmail.com" },
]
description = "A python parser for the ASD database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pegerto/ASDParser"
"Bug Tracker" = "https://github.com/pegerto/ASDParser"
