[project]
name = "ASDParser"
version = "0.2.3"
authors = [
  { name="Pegerto Fernandez", email="pegerto@gmail.com" },
]
description = "A python parser for the ASD database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/asdparser"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[project.urls]
"Homepage" = "https://github.com/pegerto/ASDParser"
"Bug Tracker" = "https://github.com/pegerto/ASDParser"
